--- a/assets/css/page.scss
+++ b/assets/css/page.scss
@@ -538,6 +538,7 @@
 			}
 		}
 		.header-lang {
+			background-color: rgba(191, 157, 119, 0.2);
 			padding: 8px 30px 8px 15px;
 			span {
 				font-size: 16px;
