--- a/assets/css/menu.scss
+++ b/assets/css/menu.scss
@@ -86,7 +86,7 @@
 					height: 12px;
 					background: url("../images/icons/arrow-menu.svg") center no-repeat;
 					position: absolute;
-					top: calc(50% - 10px);
+					top: 50%;
 					right: 0;
 					z-index: 1;
 					transform: translateY(-50%);
