--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5561,7 +5561,7 @@
         height: 12px;
         background: url("../images/icons/arrow-menu.svg") center no-repeat;
         position: absolute;
-        top: calc(50% - 10px);
+        top: 50%;
         right: 0;
         z-index: 1;
         -webkit-transform: translateY(-50%);
