--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5713,6 +5713,301 @@
     justify-content: space-between; } }
 
 /*===============/menu===========*/
+/*============btn-call=======*/
+.btn-call {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  background-color: #983031;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  position: fixed;
+  bottom: 150px;
+  right: 75px;
+  z-index: 100;
+  cursor: pointer;
+  -webkit-box-shadow: 0px 20px 50px -10px rgba(51, 0, 0, 0.7);
+  box-shadow: 0px 20px 50px -10px rgba(51, 0, 0, 0.7); }
+  .btn-call svg {
+    width: 24px;
+    height: 24px;
+    fill: #fff;
+    -webkit-transition: all 0.2s linear;
+    -o-transition: all 0.2s linear;
+    transition: all 0.2s linear;
+    -webkit-animation: 1200ms ease 0s normal none 1 running shake;
+    animation: 1200ms ease 0s normal none 1 running shake;
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite; }
+  .btn-call span {
+    font-family: "Roboto", sans-serif;
+    font-size: 10px;
+    font-weight: 900;
+    color: #fff;
+    line-height: 1.3;
+    text-transform: uppercase;
+    margin-top: 5px;
+    text-align: center; }
+
+/*===========/btn-call=======*/
+/*============Popup==========*/
+.popup {
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  top: 0px;
+  display: none;
+  overflow: auto;
+  left: 0px;
+  background: rgba(0, 0, 0, 0.2);
+  padding-bottom: 30px;
+  z-index: 500;
+  -ms-overflow-style: none;
+  scrollbar-width: none; }
+  .popup ::-webkit-scrollbar {
+    width: 0;
+    height: 0; }
+  .popup__inner {
+    opacity: 1;
+    width: 95%;
+    max-width: 320px;
+    top: 150px;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    transform: translateX(-50%);
+    position: absolute;
+    display: none;
+    z-index: 600; }
+  .popup .closex {
+    content: "";
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    z-index: 600; }
+  .popup__box {
+    background-color: #fff;
+    border-radius: 0px;
+    max-height: calc(100vh - 180px);
+    overflow-x: auto; }
+  .popup__content {
+    padding: 30px 20px; }
+  .popup.show {
+    visibility: visible;
+    opacity: 1;
+    -webkit-transition: all 1.7s linear;
+    -o-transition: all 1.7s linear;
+    transition: all 1.7s linear; }
+  .popup__close {
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    cursor: pointer;
+    position: absolute;
+    top: 18px;
+    right: 18px;
+    z-index: 2000; }
+    .popup__close svg {
+      width: 12px;
+      height: 12px;
+      fill: #203864; }
+  .popup__title {
+    font-family: "Roboto", sans-serif;
+    font-size: 24px;
+    font-weight: 900;
+    color: #2B323C;
+    line-height: 1.5;
+    margin-bottom: 20px; }
+
+/*============/popup==========*/
+/*============Form============*/
+.form__item {
+  margin-bottom: 10px; }
+
+.form__input {
+  position: relative; }
+  .form__input input, .form__input textarea {
+    width: 100%;
+    padding: 14px 24px;
+    border-radius: 0;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    font-family: "Roboto", sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    color: #2B323C;
+    line-height: 1.5;
+    background: #F3F3F4;
+    border: 1px solid #F3F3F4; }
+    .form__input input::-webkit-input-placeholder, .form__input textarea::-webkit-input-placeholder {
+      opacity: 0.4; }
+    .form__input input:-ms-input-placeholder, .form__input textarea:-ms-input-placeholder {
+      opacity: 0.4; }
+    .form__input input::-ms-input-placeholder, .form__input textarea::-ms-input-placeholder {
+      opacity: 0.4; }
+    .form__input input::placeholder, .form__input textarea::placeholder {
+      opacity: 0.4; }
+  .form__input textarea {
+    resize: none;
+    height: 100px; }
+  .form__input label {
+    font-family: "Roboto", sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    color: #2B323C;
+    line-height: 1.5;
+    opacity: 0.4;
+    position: absolute;
+    top: 15px;
+    left: 24px;
+    pointer-events: none; }
+    .form__input label span {
+      color: #983031; }
+  .form__input.fill label {
+    opacity: 0; }
+  .form__input.error input, .form__input.error textarea {
+    border-color: #983031; }
+  .form__input.error .form__notify {
+    opacity: 1; }
+
+.form__notify {
+  background-color: #983031;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  padding: 0px 6px;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  -webkit-transform: translateY(30%);
+  -ms-transform: translateY(30%);
+  transform: translateY(30%);
+  pointer-events: none;
+  opacity: 0;
+  -webkit-transition: all .2s linear;
+  -o-transition: all .2s linear;
+  transition: all .2s linear; }
+  .form__notify svg {
+    fill: #fff;
+    width: 8px;
+    height: 8px;
+    margin-right: 6px; }
+  .form__notify span {
+    font-family: "Roboto", sans-serif;
+    font-size: 12px;
+    font-weight: 400;
+    color: #fff;
+    line-height: 1.5;
+    letter-spacing: 3%; }
+
+.form .btn {
+  margin-top: 10px;
+  width: 100%;
+  -webkit-box-align: stretch;
+  -ms-flex-align: stretch;
+  align-items: stretch; }
+  .form .btn span {
+    -webkit-box-flex: 1;
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto; }
+  .form .btn__icon {
+    padding: 12px 22px; }
+
+/*===========/form============*/
+/*==========Adaptive===========*/
+@media (max-width: 765px) {
+  .btn-call {
+    bottom: 100px;
+    right: 10px; }
+  .popup-contact .popup__inner {
+    top: 50px; }
+  .popup-contact .popup__box {
+    max-height: calc(100vh - 100px); } }
+
+/*==========/adaptive===========*/
+@-webkit-keyframes shake {
+  0% {
+    -webkit-transform: rotateZ(0deg);
+    transform: rotateZ(0deg); }
+  10% {
+    -webkit-transform: rotateZ(-30deg);
+    transform: rotateZ(-30deg); }
+  15% {
+    -webkit-transform: rotateZ(15deg);
+    transform: rotateZ(15deg); }
+  30% {
+    -webkit-transform: rotateZ(-10deg);
+    transform: rotateZ(-10deg); }
+  40% {
+    -webkit-transform: rotateZ(7.5deg);
+    transform: rotateZ(7.5deg); }
+  50% {
+    -webkit-transform: rotateZ(-6deg);
+    transform: rotateZ(-6deg); }
+  60% {
+    -webkit-transform: rotateZ(5deg);
+    transform: rotateZ(5deg); }
+  70% {
+    -webkit-transform: rotateZ(-4.2deg);
+    transform: rotateZ(-4.2deg); }
+  80% {
+    -webkit-transform: rotateZ(3.75deg);
+    transform: rotateZ(3.75deg); }
+  90% {
+    -webkit-transform: rotateZ(-3.33333deg);
+    transform: rotateZ(-3.33333deg); }
+  100% {
+    -webkit-transform: rotateZ(0deg);
+    transform: rotateZ(0deg); } }
+@keyframes shake {
+  0% {
+    -webkit-transform: rotateZ(0deg);
+    transform: rotateZ(0deg); }
+  10% {
+    -webkit-transform: rotateZ(-30deg);
+    transform: rotateZ(-30deg); }
+  15% {
+    -webkit-transform: rotateZ(15deg);
+    transform: rotateZ(15deg); }
+  30% {
+    -webkit-transform: rotateZ(-10deg);
+    transform: rotateZ(-10deg); }
+  40% {
+    -webkit-transform: rotateZ(7.5deg);
+    transform: rotateZ(7.5deg); }
+  50% {
+    -webkit-transform: rotateZ(-6deg);
+    transform: rotateZ(-6deg); }
+  60% {
+    -webkit-transform: rotateZ(5deg);
+    transform: rotateZ(5deg); }
+  70% {
+    -webkit-transform: rotateZ(-4.2deg);
+    transform: rotateZ(-4.2deg); }
+  80% {
+    -webkit-transform: rotateZ(3.75deg);
+    transform: rotateZ(3.75deg); }
+  90% {
+    -webkit-transform: rotateZ(-3.33333deg);
+    transform: rotateZ(-3.33333deg); }
+  100% {
+    -webkit-transform: rotateZ(0deg);
+    transform: rotateZ(0deg); } }
+
 /*Reset
 ===============*/
 * {
