--- a/assets/css/popup.scss
+++ b/assets/css/popup.scss
@@ -198,6 +198,7 @@
 		margin-top: 10px;
 		width: 100%;
 		align-items: stretch;
+		background: $wh;
 		span {
 			flex: 1 1 auto;
 		}
@@ -211,7 +212,7 @@
 /*==========Adaptive===========*/
 @media(max-width: 765px) {
 	.btn-call {
-		bottom: 100px;
+		bottom: 60px;
 		right: 10px;
 	}
 	.popup {
