--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5770,7 +5770,7 @@
   display: none;
   overflow: auto;
   left: 0px;
-  background: rgba(0, 0, 0, 0.2);
+  background: rgba(0, 0, 0, 0.5);
   padding-bottom: 30px;
   z-index: 500;
   -ms-overflow-style: none;
@@ -5782,11 +5782,11 @@
     opacity: 1;
     width: 95%;
     max-width: 320px;
-    top: 150px;
+    top: 50%;
     left: 50%;
-    -webkit-transform: translateX(-50%);
-    -ms-transform: translateX(-50%);
-    transform: translateX(-50%);
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
     position: absolute;
     display: none;
     z-index: 600; }
@@ -5817,11 +5817,22 @@
     position: absolute;
     top: 18px;
     right: 18px;
-    z-index: 2000; }
+    z-index: 2000;
+    -webkit-transition: all .3s linear;
+    -o-transition: all .3s linear;
+    transition: all .3s linear; }
     .popup__close svg {
       width: 12px;
       height: 12px;
-      fill: #203864; }
+      fill: #203864;
+      -webkit-transition: all .1s linear;
+      -o-transition: all .1s linear;
+      transition: all .1s linear; }
+    .popup__close:hover {
+      -webkit-transform: scale3d(1.2, 1.2, 1.2);
+      transform: scale3d(1.2, 1.2, 1.2); }
+      .popup__close:hover svg {
+        fill: #983031; }
   .popup__title {
     font-family: "Roboto", sans-serif;
     font-size: 24px;
@@ -5934,8 +5945,6 @@
   .btn-call {
     bottom: 60px;
     right: 10px; }
-  .popup-contact .popup__inner {
-    top: 50px; }
   .popup-contact .popup__box {
     max-height: calc(100vh - 100px); } }
 
